objects/Blog_Post__c.object
<CustomObject>
    <description>Primary content for a blog post.</description>
    <fields>
        <fullName>Blog_Content__c</fullName>
        <description>The rich text content of the blog post.</description>
        <label>Blog Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Blog_Post_Url__c</fullName>
        <formula>HYPERLINK(&apos;/partner/Partner_Portal_Blog_Post?id=&apos;+Id,  Name )</formula>
        <label>Blog Post Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>The date and  time at which the blog post will no longer be displayed and available.  If omitted, the blog post will remain until it is removed.</description>
        <label>Blog Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Home_Page_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check to display this post on the partner portal home page blog spotlight section</description>
        <label>Blog Used on Home Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_Date__c</fullName>
        <description>The date and time at which this blog post should become visible.  If omitted, the blog post will become immediately visible.</description>
        <label>Blog Publication Date</label>
        <type>DateTime</type>
    </fields>
    <label>Blog Post</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Blog_Content__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partner_Portal_Blog_List</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>Blog_Post_Url__c</columns>
        <columns>Publication_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Publication_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Partner Portal Blog List</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Blog Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blog Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>